# storage/api-docs/api-docs.json
@@ -7,20 +7,20 @@
     },
     "servers": [
         {
-            "url": "http://chips.myposgt.net/apk2"
+            "url": "http://ec2-107-20-22-188.compute-1.amazonaws.com"
         },
         {
-            "url": "http://chips.myposgt.net/apk2"
+            "url": "localhost:8000"
         }
     ],
     "paths": {
         "/api/login": {
-            "get": {
+            "post": {
                 "tags": [
                     "Login"
                 ],
                 "summary": "Iniciar Sesión",
-                "operationId": "e3ed30977b8fa50dd9c2f2a132ed09e9",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
                 "parameters": [
                     {
                         "name": "username",
@@ -45,64 +45,70 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "properties": {
-                                            "id": {
-                                                "type": "string",
-                                                "example": "1"
-                                            },
-                                            "firstname": {
-                                                "type": "string",
-                                                "example": "Estaurdo"
-                                            },
-                                            "middlename": {
-                                                "type": "string",
-                                                "example": "Luis"
-                                            },
-                                            "lastname": {
-                                                "type": "string",
-                                                "example": "Perez"
-                                            },
-                                            "username": {
-                                                "type": "string",
-                                                "example": "mperez"
-                                            },
-                                            "avatar": {
-                                                "type": "string",
-                                                "example": "perfil.png"
-                                            },
-                                            "last_login": {
-                                                "type": "string",
-                                                "example": "2023-05-12"
-                                            },
-                                            "type": {
-                                                "type": "number",
-                                                "example": "1"
-                                            },
-                                            "date_added": {
-                                                "type": "string",
-                                                "example": "2023-05-26 16:58:06"
-                                            },
-                                            "date_updated": {
-                                                "type": "string",
-                                                "example": "2023-05-26 16:58:23"
-                                            },
-                                            "fullname": {
-                                                "type": "string",
-                                                "example": "Estuardo Luis Perez"
-                                            },
-                                            "email": {
-                                                "type": "string",
-                                                "example": "example@example.com"
-                                            },
-                                            "email_verified_at": {
-                                                "type": "string",
-                                                "example": "2023-05-26 16:58:23"
-                                            }
+                                    "properties": {
+                                        "access_token": {
+                                            "type": "string",
+                                            "example": "4|i3hT5WlPnrA6D3ulyyfLx7PaTYSuIpLO4eOpAasr"
                                         },
-                                        "type": "object"
-                                    }
+                                        "user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "1"
+                                                },
+                                                "firstname": {
+                                                    "type": "string",
+                                                    "example": "Estaurdo"
+                                                },
+                                                "middlename": {
+                                                    "type": "string",
+                                                    "example": "Luis"
+                                                },
+                                                "lastname": {
+                                                    "type": "string",
+                                                    "example": "Perez"
+                                                },
+                                                "username": {
+                                                    "type": "string",
+                                                    "example": "mperez"
+                                                },
+                                                "avatar": {
+                                                    "type": "string",
+                                                    "example": "perfil.png"
+                                                },
+                                                "last_login": {
+                                                    "type": "string",
+                                                    "example": "2023-05-12"
+                                                },
+                                                "type": {
+                                                    "type": "number",
+                                                    "example": "2"
+                                                },
+                                                "date_added": {
+                                                    "type": "string",
+                                                    "example": "2023-05-26 16:58:06"
+                                                },
+                                                "date_updated": {
+                                                    "type": "string",
+                                                    "example": "2023-05-26 16:58:23"
+                                                },
+                                                "fullname": {
+                                                    "type": "string",
+                                                    "example": "Estuardo Luis Perez"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "example": "example@example.com"
+                                                },
+                                                "email_verified_at": {
+                                                    "type": "string",
+                                                    "example": "2023-05-26 16:58:23"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -154,12 +160,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
+                }
             },
             "post": {
                 "tags": [
